# strathos

./: .dockerignore  .gitignore  BLOG.md  Dockerfile  LIMITATIONS.md  README.md  ROADMAP.md  inference.py  openenv.yaml  pyproject.toml
notebooks/: strathos_grpo_colab.ipynb
scripts/: run_episode.py
server/: __init__.py  app.py  models.py  requirements.txt  task_env.py
server/code_review/: __init__.py  task_env.py
server/medical_triage/: __init__.py  task_env.py
server/robo_advisor/: __init__.py  task_env.py  tools.py
server/scenarios/: asi01_goal_hijacking.yaml  asi02_tool_misuse.yaml  asi03_privilege_abuse.yaml  asi04_supply_chain.yaml  asi05_code_execution.yaml  asi06_memory_poisoning.yaml  asi07_inter_agent_comm.yaml  asi09_human_trust.yaml
server/static/: index.html
server/training/: __init__.py  rollout.py
server/wrapper/: __init__.py  adversarial.py  environment.py  reward.py
tests/: last_run.txt  test_smoke.py  test_strathos.py
